修改大学页面

--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -366,7 +366,7 @@
             mySwiper.swipeNext(); 
         })
     });
-    function onshow(id, des) {
+    function onshow(id) {
         var addEvent = function(element,type,callback){
         if(element.addEventListener){
             element.addEventListener(type,callback,false);
@@ -395,7 +395,7 @@
         
         
     }
-    function onhide(id, des) {
+    function onhide(id) {
         var addEvent = function(element,type,callback){
             if(element.addEventListener){
                 element.addEventListener(type,callback,false);
