--- a/views/about/culture.html
+++ b/views/about/culture.html
@@ -44,7 +44,7 @@
     <h3><span style="color:#c13232;"></span>诚信文化</h3>
 
   </div>
-  {% import "widget/academy/academy6.html" as culture %}
+  {% import "widget/academy/academy6_nohref.html" as culture %}
   {{ culture.culture(jincaishike.list,helper) }}
 </div>
 <div class="dui-layout-lg clearfix dui-box-shadow" style="background: #ffffff;margin-top:20px;    padding-bottom: 20px;">
