修改集团页面

--- a/views/about/grouptemplate.html
+++ b/views/about/grouptemplate.html
@@ -32,7 +32,7 @@
     <div class="jt-summary clearfix">
       <div class="jt-summary-left">
         <h2 class="wow fadeInLeft" data-wow-delay=".1s">集团简介</h2>
-        <p class="wow fadeInLeft" data-wow-delay=".3s">{{schooltopic.list.content | safe}}</p>
+        <div class="wow fadeInLeft" data-wow-delay=".3s">{{schooltopic.list.content | safe}}</div>
       </div>
       <div class="jt-summary-right">
         <img src="{{schooltopic.list.des_images}}" alt="" style="height:290px;width:386px;">
