--- a/public/assets/css/special_page.css
+++ b/public/assets/css/special_page.css
@@ -278,7 +278,8 @@ ul {
 	padding-right: 20px;
 	color: #666;
   line-height: 30px;
-  font-size: 16px;
+	font-size: 16px;
+	padding-bottom: 20px;
 }
 
 .sort-right .sort-title span {
@@ -309,11 +310,14 @@ ul {
 	width: 656px;
 }
 
-.jt-summary-left p {
+.jt-summary-left div.fadeInLeft {
 	color: #666;
 	text-indent: 30px;
 	font-size: 16px;
 	line-height: 30px;
+	width: 670px;
+	height: 155px;
+	overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:5;
 }
 
 .jt-summary-left h2,.from-inline h2 {
