--- a/views/about/university.html
+++ b/views/about/university.html
@@ -414,6 +414,7 @@
       font-size: 16px;
       color: #666;
       line-height: 32px;
+      overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:5;
   }
   .te_con_rigth_bottom {
       width: 52px;
