除首页外，导航增加返回首页按钮

--- a/views/index.html
+++ b/views/index.html
@@ -134,8 +134,8 @@
   </div>
 </div>
 {% include "widget/top/top_liuxue.html" %}
-{% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-{{ new_nav_first.new_nav_first(tdk,helper) }}
+{% import "widget/new_nav_first/home_nav.html" as home_nav %}
+{{ home_nav.home_nav(tdk,helper) }}
 <div class="main" style="width: 1200px;margin: 0 auto;">
   <!--轮播图-->
   <div class="lunbo">
