--- a/views/widget/modal/dialog_free.html
+++ b/views/widget/modal/dialog_free.html
@@ -48,6 +48,10 @@
               id:"54"
 						 },
 						 {
+              name:"中国澳门",
+              id:"55"
+						 },
+						 {
               name:"俄罗斯",
               id:"100"
 						 },
