--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -184,10 +184,13 @@
        </li>
 
       </ul>
-      <p class="copyright" style="padding-left: 0">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
+      <div class="footer-copy-right clearfix"><p>©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p><div class="login-btn" onclick="adviserlogin()">
+        咨询顾问登录
+      </div></div>
+      <!-- <p class="copyright" style="padding-left: 0">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
       <div class="adviser-login" onclick="adviserlogin()">
         咨询顾问登录
-      </div>
+      </div> -->
     </div>
 
   </div>
