--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -50,10 +50,13 @@
                 <li><i class="iconfont">&#xe611;</i><span id="tel">010-65685656</span></li>
                 <li><i class="iconfont">&#xe603;</i><span id="address">北京市建国门外大街永安东里米阳大厦5层（永安里地铁C口向南50米) </span></li>
             </ol>
-            <p class="copyright" style="padding-left: 0">©2009金吉列出入境咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;移民投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
+            <div class="footer-copy-right clearfix"><p>©2009金吉列出入境咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;移民投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p><div class="login-btn" onclick="adviserlogin()">
+                咨询顾问登录
+              </div></div>
+            <!-- <p class="copyright" style="padding-left: 0">©2009金吉列出入境咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;移民投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
             <div class="adviser-login" onclick="adviserlogin()">
                 咨询顾问登录
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
