--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -268,8 +268,18 @@
 .gg-group ul{overflow:hidden;margin-right:-10px;height:146px;}
 .gg-group ul li{float:left;margin-right:10px;width:242px;height:146px;background:red;}
 .gg-group ul li a{display:block;}
-.dialog-modal{position:fixed;top:0;right:0;bottom:0;left:0;z-index:1005;background:rgba(0,0,0,.7);}
-.modal-content {
+.dialog-modal{
+    position:fixed;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    z-index:1005;
+    background:rgba(0,0,0,.7);
+    width: 100%;
+    height: 100%;
+}
+/* .modal-content {
     position:relative;
     z-index:1006;
     margin:auto;
@@ -279,11 +289,22 @@
     height:100%;
     background:url(../img/home_else_bg@2x.png) no-repeat center center;
     background-size:contain;
+} */
+.modal-content {
+    position:relative;
+    z-index:1006;
+    margin:auto;
+    width: 750px;
+    height: 497px;
+    background:url(../img/home_else_bg@2x.png) no-repeat center center;
+    background-size: 750px 497px;
+    top: 50%;
+    margin-top: -248.5px;
 }
 .formContent{position:absolute;top:50%;right:0;bottom:0;left:0;margin:auto;width:312px;}
 .form-group div{margin-bottom:9px;}
 .formposirion{position:relative;}
-.close{position:absolute;top:-70%;right:0;width:36px;height:36px;background:url(../img/close_icon@2x.png) no-repeat center;background-size: cover;}
+.close{position:absolute;top:-95%;right:-15px;width:36px;height:36px;background:url(../img/close_icon@2x.png) no-repeat center;background-size: cover;}
 .error{
     position:absolute;
     top:-54px;
@@ -328,7 +349,7 @@
     font-size:18px;
     margin-top: 25px;
 }
-@media screen and (min-width:768px){
+/* @media screen and (min-width:768px){
     .formContent{top:51%;}
     .close{
         position: absolute;
@@ -336,7 +357,7 @@
         top: -103%;
     }
     .modal-content{top:-4%;}
-}
+} */
 .close-btn{background:url(../img/rotate.gif) no-repeat center center;width: 208px;height: 163px;position: fixed;left: 0;bottom: 30px;z-index: 1100;cursor: pointer;}
 .more-look{position: absolute;
     top: -68px;
