修改大学页面大学排名

--- a/views/about/university.html
+++ b/views/about/university.html
@@ -626,7 +626,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 0 and loop.index <= 8 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -639,7 +639,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 8 and loop.index <= 16 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -652,7 +652,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 16 and loop.index <= 24 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -665,7 +665,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 24 and loop.index <= 32 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -678,7 +678,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 32 and loop.index <= 40 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -691,7 +691,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 40 and loop.index <= 48 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -704,7 +704,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 48 and loop.index <= 56 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -717,7 +717,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 56 and loop.index <= 64 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -730,7 +730,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 64 and loop.index <= 72 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -756,7 +756,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 80 and loop.index <= 88 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -769,7 +769,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 88 and loop.index <= 96 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -782,7 +782,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 96 and loop.index <= 104 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -795,7 +795,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 104 and loop.index <= 112 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
@@ -808,7 +808,7 @@
                             {% for item in schooltopic.university_ranking %}
                             {% if loop.index > 112 and loop.index <= 120 %}
                             <div class="canzan-slide" >
-                                <a target="_blank"  href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
+                                <a href="javascript:void(0);" data-pid="{{item.pid}}" class="top-item" style="color: #fff;">
                                     <span class="pai_con_left_con_h_l" style="text-align: left;">{{item}}</span>
                                 </a>
                             </div>
