修改中学页面

--- a/views/about/university.html
+++ b/views/about/university.html
@@ -481,8 +481,11 @@
       background: blue;
   }
   .ping_con p {
+      width: 210px;
+      max-height: 36px;
       font-size: 16px;
       color: #333;
+      overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:2;
   }
   .slider .slider-img {
       height: 87%;
