--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -155,6 +155,7 @@
       font-size: 16px;
       color: #333;
       line-height: 36px;
+      max-height: 330px;
       overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:9;
   }
   .you_title {
@@ -286,6 +287,7 @@
       color: #333;
       line-height: 36px;
       margin-top: 30px;
+      max-height: 208px;
       overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:6;
   }
   .form-content span {
@@ -388,7 +390,7 @@
         var blen = des.replace(/[\u0391-\uFFE5]/g,"aa").length;
         // console.log('show++++++++++', blen)
         if (blen > 32) {
-            console.log('aaaa')
+            // console.log('aaaa')
             $("#kai_con_chang_" + id).css("display", "block");
             $("#kai_con_" + id).css("display", "none");
         }
@@ -429,11 +431,11 @@
         <a class="arrow-right arrow-btn" style="display:block;"></a>
         <div class="swiper-container" style="width: 1055px;margin: 0 auto;height:270px;">
             <div class="swiper-wrapper">
-                    {% for k, init in schooltopic.list.course_images %}
+                {% for k, init in schooltopic.list.course_images %}
                 <div class="swiper-slide clearfix">
                     
                     <div class="canzan-slide" {% if loop.index % 4 == 0 %} style="margin-right: 0px;" {% endif %} onmousemove="onshow('{{loop.index}}');" onmouseout="onhide('{{loop.index}}');">
-                        <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
+                        <a href="javascript: void(0);"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
                             <img src="{{ init.url }}" alt="{{ init.alt }}"/>
                             {% if schooltopic.list.course_des[k].length > 32 %}
                             <div id="kai_con_{{loop.index}}" class="kai_con" style="display:block;" data-des="{{ schooltopic.list.course_des[k] }}">{{ schooltopic.list.course_des[k] | ellipsis(32) }}......</div>
